--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
